# web

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  log_config.ini  pyproject.toml  setup.cfg
.github/workflows/: check.yml  push.yml
dnevnik365/api/: app.py  homeworks.py  purposes.py  timetable.py
dnevnik365/backend/api/: app.py  database.py  homeworks.py  purposes.py  settings.py  timetable.py
dnevnik365/backend/models/: database_models.py  models.py  pydantic_models.py
dnevnik365/backend/scripts/: base.py  dnevnikru.py
dnevnik365/backend/tests/: app.py  purposes.py
dnevnik365/core/: database.py  logs.py  settings.py
dnevnik365/models/: enums.py  pydantic.py
dnevnik365/scripts/: dnevnikru.py
dnevnik365/services/: purposes.py
migrations/: env.py
tests/: __init__.py  purposes.py
