[tool.poetry]
name = "dnevnik365"
version = "0.1.0"
description = ""
authors = ["Ilya Kuznetsov <ilkztsff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
fastapi-users = "^13.0.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pydnevnikruapi = "^0.1.1"
sqlalchemy = "^2.0.29"
redis = "^5.0.4"
alembic = "^1.13.1"
pyright = "^1.1.360"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
